adding plots with the flag indicator

--- a/apps/1d/advection/sq_wave/parameters.ini
+++ b/apps/1d/advection/sq_wave/parameters.ini
@@ -8,9 +8,9 @@ max_dt      = 1.0e4      ; max allowable dt
 max_cfl     = 1.00       ; max allowable Courant number
 desired_cfl = 0.20       ; desired Courant number
 nv          = 500000     ; max number of time steps per call to DogSolve
-time_stepping_method = Lax-Wendroff ; (e.g., Runge-Kutta, SDC, Lax-Wendroff, User-Defined)
-space_order = 5   ; order of accuracy in space
-time_order  = 3   ; order of accuracy in time
+time_stepping_method = User-Defined ; (e.g., Runge-Kutta, SDC, Lax-Wendroff, User-Defined)
+space_order = 11  ; order of accuracy in space
+time_order  = 11  ; order of accuracy in time
 verbosity   = 0   ; verbosity of output
 mcapa       = 0   ; mcapa (capacity function index in aux arrays)
 maux        = 1   ; maux (number of aux arrays, maux >= mcapa)
@@ -19,7 +19,7 @@ meqn        = 1   ; number of equations
 
 [grid]
 mx    = 100   ; number of grid elements in x-direction
-mbc   = 5     ; number of ghost cells on each boundary
+mbc   = 7     ; number of ghost cells on each boundary
 xlow  =-1.0e0 ; left end point
 xhigh = 1.0e0 ; right end point
 
