1D advection with DT flux limiter - this is not a good version

--- a/apps/1d/advection/sq_wave/parameters.ini
+++ b/apps/1d/advection/sq_wave/parameters.ini
@@ -6,7 +6,7 @@ tfinal      = 2.0        ; final time
 initial_dt  = 1.00e-03   ; initial dt
 max_dt      = 1.0e4      ; max allowable dt 
 max_cfl     = 1.00       ; max allowable Courant number
-desired_cfl = 0.20       ; desired Courant number
+desired_cfl = 0.40       ; desired Courant number
 nv          = 500000     ; max number of time steps per call to DogSolve
 time_stepping_method = User-Defined ; (e.g., Runge-Kutta, SDC, Lax-Wendroff, User-Defined)
 space_order = 11  ; order of accuracy in space
@@ -16,9 +16,11 @@ mcapa       = 0   ; mcapa (capacity function index in aux arrays)
 maux        = 1   ; maux (number of aux arrays, maux >= mcapa)
 source_term = false   ; source term (true or false)
 meqn        = 1   ; number of equations
+mr_limiter  = true ; flag for multiresolution analysis limiter (only works with DTs)
+output_dir  = output ; name of output directory
 
 [grid]
-mx    = 100   ; number of grid elements in x-direction
+mx    = 600   ; number of grid elements in x-direction
 mbc   = 7     ; number of ghost cells on each boundary
 xlow  =-1.0e0 ; left end point
 xhigh = 1.0e0 ; right end point
