working flux limiter that pushes down to 3rd order accuracy in the vicinity of shocks

--- a/apps/1d/advection/sq_wave/Makefile
+++ b/apps/1d/advection/sq_wave/Makefile
@@ -12,8 +12,8 @@ include $(FINESS)/apps/1d/advection/lib/Makefile.defs
 #
 #ConstructIntegratedF    = ConstructIntegratedF
 #FinSolveUser            = FinSolveUser
-#FinSolveUser            = $(APP_LIB)/FinSolveDiffTransform
-FinSolveUser            = $(APP_LIB)/FinSolveDiffTransformFluxLimiter
+FinSolveUser            = $(APP_LIB)/FinSolveDiffTransform
+#FinSolveUser            = $(APP_LIB)/FinSolveDiffTransformFluxLimiter
 
 # place to add object modules
 #
