--- a/apps/1d/advection/sq_wave/parameters.ini
+++ b/apps/1d/advection/sq_wave/parameters.ini
@@ -9,8 +9,10 @@ max_cfl     = 1.00       ; max allowable Courant number
 desired_cfl = 0.40       ; desired Courant number
 nv          = 500000     ; max number of time steps per call to DogSolve
 time_stepping_method = User-Defined ; (e.g., Runge-Kutta, SDC, Lax-Wendroff, User-Defined)
+;time_stepping_method = Runge-Kutta ; (e.g., Runge-Kutta, SDC, Lax-Wendroff, User-Defined)
 space_order = 11  ; order of accuracy in space
-time_order  = 11  ; order of accuracy in time
+time_order  = 11   ; order of accuracy in time
+;time_order  = 3   ; order of accuracy in time
 verbosity   = 0   ; verbosity of output
 mcapa       = 0   ; mcapa (capacity function index in aux arrays)
 maux        = 1   ; maux (number of aux arrays, maux >= mcapa)
@@ -20,7 +22,7 @@ mr_limiter  = true ; flag for multiresolution analysis limiter (only works with 
 output_dir  = output ; name of output directory
 
 [grid]
-mx    = 600   ; number of grid elements in x-direction
+mx    = 100   ; number of grid elements in x-direction
 mbc   = 7     ; number of ghost cells on each boundary
 xlow  =-1.0e0 ; left end point
 xhigh = 1.0e0 ; right end point
