--- a/apps/1d/euler/shock_entropy/Makefile
+++ b/apps/1d/euler/shock_entropy/Makefile
@@ -8,7 +8,8 @@ include $(FINESS)/apps/1d/euler/lib/Makefile.defs
 
 # overridden library objects
 #
-FinSolveUser    =  $(FINESS)/lib/1d/FinSolveRK_PIF
+#FinSolveUser    =  $(FINESS)/lib/1d/FinSolveRK_PIF
+FinSolveUser    =  $(FINESS)/lib/1d/FinSolveDiffTransform
 
 # place to add object modules
 #
