--- a/apps/1d/euler/shock_entropy/parameters.ini
+++ b/apps/1d/euler/shock_entropy/parameters.ini
@@ -8,18 +8,23 @@ max_dt      = 1.0e10    ; max allowable dt
 max_cfl     = 0.50      ; max allowable Courant number
 desired_cfl = 0.20      ; desired Courant number
 nv          = 500000    ; max number of time steps per call to DogSolve
-time_stepping_method = Runge-Kutta ; (e.g., Runge-Kutta, SDC, Lax-Wendroff, User-Defined)
-space_order = 5   ; order of accuracy in space
-time_order  = 3   ; order of accuracy in time
+;time_stepping_method = Runge-Kutta ; (e.g., Runge-Kutta, SDC, Lax-Wendroff, User-Defined)
+time_stepping_method = User-Defined ; (e.g., Runge-Kutta, SDC, Lax-Wendroff, User-Defined)
+space_order = 11  ; order of accuracy in space
+time_order  = 11  ; order of accuracy in time
 verbosity   = 1   ; verbosity of output
 mcapa       = 0   ; mcapa (capacity function index in aux arrays)
 maux        = 0   ; maux (number of aux arrays, maux >= mcapa)
 source_term = false   ; source term (true or false)
 meqn        = 5   ; number of equations
+mr_limiter  = true ; flag for multiresolution analysis limiter (only works with DTs)
+output_dir  = output ; flag for multiresolution analysis limiter (only works with DTs)
+
 [grid]
 mx    = 300   ; number of grid elements in x-direction
-mbc   = 3     ; number of ghost cells on each boundary
+mbc   = 7     ; number of ghost cells on each boundary
 xlow  =-5.0e0 ; left end point
 xhigh = 5.0e0 ; right end point
+
 [euler]
 gamma = 1.4     ; gamma (gas constant)
