--- a/apps/1d/burgers/sine_to_n/parameters.ini
+++ b/apps/1d/burgers/sine_to_n/parameters.ini
@@ -1,28 +1,28 @@
-; Parameters common to finess applications
+; Parameters common to all FINESS applications
 [finess]
 ndims       = 1             ; 1, 2 or 3
 nout        = 21            ; number of output times to print results
-;tfinal      = 1.591549430918953e-01 ; final time 
 tfinal      = 3.0           ; final time 
-initial_dt  = 1.0       ; initial dt
-max_dt      = 1.0e10    ; max allowable dt 
-max_cfl     = 1.00      ; max allowable Courant number
-desired_cfl = 0.3   ; desired Courant number
-nv          = 500000    ; max number of time steps per call to DogSolve
+initial_dt  = 1.0           ; initial dt
+max_dt      = 1.0e10        ; max allowable dt 
+max_cfl     = 0.30          ; max allowable Courant number
+desired_cfl = 0.2           ; desired Courant number
+nv          = 500000        ; max number of time steps per call to DogSolve
 time_stepping_method = User-Defined ; (e.g., Runge-Kutta, SDC, Lax-Wendroff, User-Defined)
-space_order = 5  ; order of accuracy in space
-time_order  = 5  ; order of accuracy in time
-meqn        = 1            ; number of equations
-verbosity   = 1            ; verbosity of output
-mcapa       = 0            ; mcapa (capacity function index in aux arrays)
-maux        = 0            ; maux (number of aux arrays, maux >= mcapa)
-source_term = false        ; source term (true or false)
-output_dir  = output       ; location of the output directory
-global_alpha = true        ; parameter for using a global value for alpha
+space_order = 11            ; order of accuracy in space
+time_order  = 11            ; order of accuracy in time
+meqn        = 1             ; number of equations
+verbosity   = 1             ; verbosity of output
+mcapa       = 0             ; mcapa (capacity function index in aux arrays)
+maux        = 0             ; maux (number of aux arrays, maux >= mcapa)
+source_term = false         ; source term (true or false)
+mr_limiter  = true          ; flag for multiresolution analysis limiter (for DT methods only)
+output_dir  = output        ; location of the output directory
+global_alpha = true         ; parameter for using a global value for alpha
 
 [grid]
 mx    =      100 ; number of grid elements in x-direction
-mbc   =      5   ; number of ghost cells on each boundary
+mbc   =      7   ; number of ghost cells on each boundary
 xlow  =  0.0e0   ; left end point
 xhigh =  2.0e0   ; right end point
 
