--- a/apps/2d/advection/smooth_example/parameters.ini
+++ b/apps/2d/advection/smooth_example/parameters.ini
@@ -1,31 +1,32 @@
 
 ; Parameters common to FINESS applications
 [finess]
-ndims       = 2          ; 1, 2, or 3
-nout        = 1          ; number of output times to print results
-tfinal      = 2.0        ; final time
-initial_dt  = 1.0        ; initial dt
-max_dt      = 1.0e10     ; max allowable dt 
-max_cfl     = 1.00       ; max allowable Courant number
-desired_cfl = 0.400000    ; desired Courant number
-nv          = 500000     ; max number of time steps per call to DogSolve
+ndims       = 2         ; 1, 2, or 3
+nout        = 10        ; number of output times to print results
+tfinal      = 2.0       ; final time
+initial_dt  = 1.0       ; initial dt
+max_dt      = 1.0e10    ; max allowable dt 
+max_cfl     = 1.00      ; max allowable Courant number
+desired_cfl = 0.400000  ; desired Courant number
+nv          = 500000    ; max number of time steps per call to DogSolve
 time_stepping_method = User-Defined ; (e.g., Runge-Kutta, Lax-Wendroff, Multiderivative, User-Defined)
-space_order = 11   ; order of accuracy in space
-time_order  = 11   ; order of accuracy in time
-verbosity   = 1   ; verbosity of output
-mcapa       = 0   ; mcapa (capacity function index in aux arrays)
-maux        = 2   ; maux (number of aux arrays, maux >= mcapa)
-source_term = false   ; source term (1-yes, 0-no)
-meqn        = 1   ; number of equations
-output_dir  = output_008 ; location of the output directory
+space_order = 5         ; order of accuracy in space
+time_order  = 5         ; order of accuracy in time
+verbosity   = 1         ; verbosity of output
+mcapa       = 0         ; mcapa (capacity function index in aux arrays)
+maux        = 2         ; maux (number of aux arrays, maux >= mcapa)
+source_term = false     ; source term (1-yes, 0-no)
+meqn        = 1         ; number of equations
+mr_limiter  = false     ; flag for multiresolution analysis limiter (only works with DTs)
+output_dir  = output    ; location of the output directory
 
 ; -------------------------------------------------
 ;   Cartesian grid data (ignored if Unstructured)
 ; -------------------------------------------------
 [grid]
-mx    =  128  ; number of grid elements in x-direction
-my    =  128  ; number of grid elements in y-direction
-mbc   =   11      ; number of ghost cells on each boundary
+mx    =  128     ; number of grid elements in x-direction
+my    =  128     ; number of grid elements in y-direction
+mbc   =   5      ; number of ghost cells on each boundary
 xlow  =   0.0e0  ; left end point
 xhigh =   1.0e0  ; right end point
 ylow  =   0.0e0  ; lower end point
@@ -37,5 +38,5 @@ yhigh =   1.0e0  ; upper end point
 [weno]
 weno_version  = JS     ; type of WENO reconstruction (e.g. JS, FD, Z)
 epsilon       = 1e-29  ; regulization parameter  ( epsilon > 0.0        )
-alpha_scaling = 1.0    ; scaling parameter       ( alpha_scaling >= 1.0 )
+alpha_scaling = 1.1    ; scaling parameter       ( alpha_scaling >= 1.0 )
 
