--- a/apps/2d/euler/riemann_test/Makefile
+++ b/apps/2d/euler/riemann_test/Makefile
@@ -9,7 +9,8 @@ include $(FINESS)/apps/2d/euler/lib/Makefile.defs
 ## ------------------------------------------------------------------------- ##
 # overridden library objects
 #
-FinSolveUser            = $(FINESS)/lib/2d/FinSolveRK_PIF
+#FinSolveUser            = $(FINESS)/lib/2d/FinSolveRK_PIF
+FinSolveUser            = $(APP_LIB)/FinSolveDiffTransform
 ## ------------------------------------------------------------------------- ##
 
 # place to add object modules
