updated parameters for 2D Euler Riemann problem

--- a/apps/2d/euler/two_d_riemann_test/parameters.ini
+++ b/apps/2d/euler/two_d_riemann_test/parameters.ini
@@ -4,34 +4,42 @@
 [finess]
 ndims       = 2         ; 1, 2, or 3
 nout        = 10        ; number of output times to print results
-tfinal      = 0.20      ; final time
+;tfinal      = 0.20      ; final time
+tfinal      = 0.80      ; final time (for RP1)
 initial_dt  = 0.001     ; initial dt
 max_dt      = 1.0e10    ; max allowable dt 
 max_cfl     = 0.45      ; max allowable Courant number 1/(2k-1)
 desired_cfl = 0.40      ; desired Courant number
 nv          = 500000    ; max number of time steps per call to DogSolve
-;time_stepping_method = Runge-Kutta ; (e.g., Runge-Kutta, SDC, Lax-Wendroff, User-Defined)
 time_stepping_method = User-Defined ; (e.g., Runge-Kutta, SDC, Lax-Wendroff, User-Defined)
-space_order = 11     ; order of accuracy in space
-time_order  = 11     ; order of accuracy in time
+space_order = 5      ; order of accuracy in space
+time_order  = 5      ; order of accuracy in time
 verbosity   = 1      ; verbosity of output
 mcapa       = 0      ; mcapa (capacity function index in aux arrays)
 maux        = 1      ; maux (number of aux arrays, maux >= mcapa)
 source_term = false  ; source term (1-yes, 0-no)
 meqn        = 5      ; number of equations
-output_dir  = output_dt_11 ; location of output directory
+output_dir  = output ; location of output directory
 
 ; -------------------------------------------------
 ;   Cartesian grid data (ignored if Unstructured)
 ; -------------------------------------------------
 [grid]
-mx    = 100 	; number of grid elements in x-direction
-my    =  10     ; number of grid elements in y-direction
-mbc   =  11     ; number of ghost cells on each boundary
-xlow  =  0.0e0  ; left end point
-xhigh =  1.0e0  ; right end point
-ylow  =  0.0e0  ; lower end point
-yhigh =  1.0e0  ; upper end point
+mx    = 256 	; number of grid elements in x-direction
+my    = 256     ; number of grid elements in y-direction
+mbc   =  5      ; number of ghost cells on each boundary
+
+;xlow  =  0.0e0  ; left end point
+;xhigh =  1.0e0  ; right end point
+;ylow  =  0.0e0  ; lower end point
+;yhigh =  1.0e0  ; upper end point
+
+; Grid spacing for RP1 and RP3
+xlow  = -0.5e0  ; left end point
+xhigh =  0.5e0  ; right end point
+ylow  = -0.5e0  ; lower end point
+yhigh =  0.5e0  ; upper end point
+
 
 ; -------------------------------------------------
 ;  Euler parameters
