flux truncation for 2D advection - moved FinSolveDT to the main 2D library

--- a/apps/2d/advection/smooth_example/Makefile
+++ b/apps/2d/advection/smooth_example/Makefile
@@ -12,7 +12,7 @@ include $(FINESS)/apps/2d/advection/lib/Makefile.defs
 # overridden library objects
 #
 AuxFunc                 = AuxFunc
-FinSolveUser            = $(APP_LIB)/FinSolveDiffTransform
+FinSolveUser            = $(FINESS)/lib/2d/FinSolveDT
 ## ------------------------------------------------------------------------- ##
 
 ALL_OBJECTS = $(COMMON_OBJECTS) $(APP_LIB_OBJECTS)
