updated Euler Makefile to point to DT stuff and added notes on RP options

--- a/apps/2d/euler/mach_reflection/Makefile
+++ b/apps/2d/euler/mach_reflection/Makefile
@@ -6,8 +6,12 @@ include $(FINESS)/lib/2d/Makefile.defs
 # Default (application level) definintions
 include $(FINESS)/apps/2d/euler/lib/Makefile.defs
 
+## ------------------------------------------------------------------------- ##
 # overridden library objects
 #
+#FinSolveUser            = $(FINESS)/lib/2d/FinSolveRK_PIF
+FinSolveUser            = $(FINESS)/lib/2d/FinSolveDT
+## ------------------------------------------------------------------------- ##
 
 ALL_OBJECTS = $(COMMON_OBJECTS) $(APP_LIB_OBJECTS)
 
