--- a/apps/2d/euler/two_d_riemann_test/Makefile
+++ b/apps/2d/euler/two_d_riemann_test/Makefile
@@ -10,7 +10,7 @@ include $(FINESS)/apps/2d/euler/lib/Makefile.defs
 # overridden library objects
 #
 #FinSolveUser            = $(FINESS)/lib/2d/FinSolveRK_PIF
-FinSolveUser            = $(APP_LIB)/FinSolveDiffTransform
+FinSolveUser            = $(FINESS)/lib/2d/FinSolveDT
 ## ------------------------------------------------------------------------- ##
 
 # place to add object modules
