fixed makefile and running script for Euler convergence study

--- a/apps/2d/euler/test_exact1/Makefile
+++ b/apps/2d/euler/test_exact1/Makefile
@@ -9,8 +9,8 @@ include $(FINESS)/apps/2d/euler/lib/Makefile.defs
 ## ------------------------------------------------------------------------- ##
 # overridden library objects
 #
-FinSolveUser            = $(APP_LIB)/FinSolveDiffTransform
 #FinSolveUser            = $(FINESS)/lib/2d/FinSolveRK_PIF
+FinSolveUser            = $(FINESS)/lib/2d/FinSolveDT
 
 # place to add object modules
 #
