updated scripts for 1D isentropic Euler

--- a/apps/1d/isentropic_euler/test_exact/parameters.ini
+++ b/apps/1d/isentropic_euler/test_exact/parameters.ini
@@ -1,30 +1,33 @@
-
 ; Parameters common to FINESS applications
 [finess]
 ndims       = 1         ; 1, 2, or 3
-nout        = 1        ; number of output times to print results
-tfinal      = 0.15       ; final time
+nout        = 1         ; number of output times to print results
+tfinal      = 0.15      ; final time
 initial_dt  = 0.0005    ; initial dt
 max_dt      = 1.0e10    ; max allowable dt 
 max_cfl     = 0.5       ; max allowable Courant number
-desired_cfl = 0.100000   ; desired Courant number
+desired_cfl = 0.100000  ; desired Courant number
 nv          = 500000    ; max number of time steps per call to DogSolve
-time_stepping_method = Runge-Kutta ; (e.g., Runge-Kutta, SDC, Lax-Wendroff, User-Defined)
-space_order = 5   ; order of accuracy in space
-time_order  = 5   ; order of accuracy in time
+;time_stepping_method = Runge-Kutta ; (e.g., Runge-Kutta, SDC, Lax-Wendroff, User-Defined)
+time_stepping_method = User-Defined ; (e.g., Runge-Kutta, SDC, Lax-Wendroff, User-Defined)
+space_order = 5      ; order of accuracy in space
+time_order  = 5      ; order of accuracy in time
 meqn        = 2      ; number of equations
 verbosity   = 1      ; verbosity of output
 mcapa       = 0      ; mcapa (capacity function index in aux arrays)
 maux        = 0      ; maux (number of aux arrays, maux >= mcapa)
 source_term = false  ; source term (true or false)
 output_dir  = output_RK_9 ; location of the output directory
+
 [grid]
 mx    =  1031  ; number of grid elements in x-direction
 mbc   = 5     ; number of ghost cells on each boundary
 xlow  =   -1.0e0  ; left end point
 xhigh =   1.0e0  ; right end point
+
 [eulerParams]
 gamma = 1.4     ; gamma (gas constant)
+
 [weno]
 weno_version  = FD     ; type of WENO reconstruction (e.g. JS, FD, Z)
 epsilon       = 1e-29  ; regulization parameter  ( epsilon > 0.0        )
