--- a/apps/1d/isentropic_euler/test_exact/parameters_DT.ini
+++ b/apps/1d/isentropic_euler/test_exact/parameters_DT.ini
@@ -1,4 +1,3 @@
-
 ; Parameters common to FINESS applications
 [finess]
 ndims       = 1         ; 1, 2, or 3
@@ -7,26 +6,29 @@ tfinal      = 2.0       ; final time
 initial_dt  = 0.0005    ; initial dt
 max_dt      = 1.0e10    ; max allowable dt 
 max_cfl     = 1.00      ; max allowable Courant number
-desired_cfl = 0.700000   ; desired Courant number
+desired_cfl = 0.3       ; desired Courant number
 nv          = 500000    ; max number of time steps per call to DogSolve
 time_stepping_method = User-Defined ; (e.g., Runge-Kutta, SDC, Lax-Wendroff, User-Defined)
-space_order = 5   ; order of accuracy in space
-time_order  = 5   ; order of accuracy in time
-meqn        = 5      ; number of equations
-verbosity   = 1      ; verbosity of output
-mcapa       = 0      ; mcapa (capacity function index in aux arrays)
-maux        = 0      ; maux (number of aux arrays, maux >= mcapa)
-source_term = false  ; source term (true or false)
-output_dir  = output_004 ; location of the output directory
+space_order = 5         ; order of accuracy in space
+time_order  = 5         ; order of accuracy in time
+meqn        = 5         ; number of equations
+verbosity   = 1         ; verbosity of output
+mcapa       = 0         ; mcapa (capacity function index in aux arrays)
+maux        = 0         ; maux (number of aux arrays, maux >= mcapa)
+source_term = false     ; source term (true or false)
+output_dir  = output_DT ; location of the output directory
+
 [grid]
-mx    =  400  ; number of grid elements in x-direction
-mbc   = 5     ; number of ghost cells on each boundary
+mx    =  400     ; number of grid elements in x-direction
+mbc   =    5     ; number of ghost cells on each boundary
 xlow  =   0.0e0  ; left end point
 xhigh =   2.0e0  ; right end point
 ylow  =   0.0e0  ; lower end point
 yhigh =   2.0e0  ; upper end point
+
 [eulerParams]
 gamma = 1.4     ; gamma (gas constant)
+
 [weno]
 weno_version  = JS     ; type of WENO reconstruction (e.g. JS, FD, Z)
 epsilon       = 1e-12  ; regulization parameter  ( epsilon > 0.0        )
