more work - still cannot get 1D isentropic euler example to compile

--- a/apps/1d/isentropic_euler/lib/Makefile.defs
+++ b/apps/1d/isentropic_euler/lib/Makefile.defs
@@ -29,13 +29,15 @@ AuxFunc          = $(APP_LIB)/AuxFunc
 # Positivity-preserving limiter
 ApplyMPPLimiter1D = $(APP_LIB)/ApplyMPPLimiter1D
 
+ConstructDiffTransformL = $(APP_LIB)/ConstructDiffTransformL
+
 # place to add objects and sources
 #
 APP_LIB_OBJECTS = \
-   $(APP_LIB)/ConstructDiffTransformL.o
+  $(ConstructDiffTransformL).o
 
 #
 APP_LIB_SOURCES = \
-   $(APP_LIB)/ConstructDiffTransformL.cpp
+  $(ConstructDiffTransformL).cpp
 
 #
