--- a/lib/Makefile.defs
+++ b/lib/Makefile.defs
@@ -4,13 +4,11 @@ include $(FINESS)/lib/sys/Makefile.defs
 
 EXECUTABLE = finess.exe
 
-
-INIPARAMS = IniParams
-INIPARAMS_H = $(INIPARAMS).h
-INIPARAMS_CPP = $(INIPARAMS).cpp
+INIPARAMS       = IniParams
+INIPARAMS_H     = $(INIPARAMS).h
+INIPARAMS_CPP   = $(INIPARAMS).cpp
 
 GENERATE_INIPARAMS_PY = generate_iniparams.py
-
 
 # where this library lives
 TOPLIB = $(FINESS)/lib
@@ -22,9 +20,11 @@ LFLAGS = $(HDF5_LIBRARIES)
 TOPLIB_INCLUDE = -I$(TOPLIB) $(LIB_SYS_INCLUDE)
 #
 
-MAIN_GLOBAL     = $(TOPLIB)/main_global
-RunStartScript  = $(TOPLIB)/RunStartScript
-WenoReconstruct = $(TOPLIB)/WenoReconstruct
+MAIN_GLOBAL         = $(TOPLIB)/main_global
+RunStartScript      = $(TOPLIB)/RunStartScript
+WenoReconstruct     = $(TOPLIB)/WenoReconstruct
+CentralDifferences  = $(TOPLIB)/CentralDifferences
+Quadrature          = $(TOPLIB)/Quadrature
 
 TOPLIB_OBJECTS = \
   $(LIB_SYS_OBJECTS) \
@@ -35,6 +35,8 @@ TOPLIB_OBJECTS = \
   $(TOPLIB)/dog_str.o \
   $(TOPLIB)/dog_io.o \
   $(WenoReconstruct).o \
+  $(CentralDifferences).o \
+  $(Quadrature).o \
   $(RunStartScript).o \
 #
 TOPLIB_SOURCES = \
@@ -48,6 +50,8 @@ TOPLIB_SOURCES = \
   $(TOPLIB)/dog_str.cpp \
   $(TOPLIB)/dog_io.cpp \
   $(WenoReconstruct).cpp \
+  $(CentralDifferences).cpp \
+  $(Quadrature).cpp \
   $(RunStartScript).cpp \
 
 # inheriting libraries and applications are expected to override these
