All 1D applications now compile.
I am confused about some of the behaviour in the Makefile.  It seems that when
I add an additional module to the application library, it thinks there should
be a total of two of them there.  I will have to do some more digging on this.

--- a/apps/1d/isentropic_euler/lib/Makefile.defs
+++ b/apps/1d/isentropic_euler/lib/Makefile.defs
@@ -28,16 +28,13 @@ AuxFunc          = $(APP_LIB)/AuxFunc
 
 # Positivity-preserving limiter
 ApplyMPPLimiter1D = $(APP_LIB)/ApplyMPPLimiter1D
-
-ConstructDiffTransformL = $(APP_LIB)/ConstructDiffTransformL
+JUNK              = $(APP_LIB)/Junk
 
 # place to add objects and sources
 #
 APP_LIB_OBJECTS = \
-  $(ConstructDiffTransformL).o
 
 #
 APP_LIB_SOURCES = \
-  $(ConstructDiffTransformL).cpp
 
 #
