--- a/apps/1d/isentropic_euler/test_exact/Makefile
+++ b/apps/1d/isentropic_euler/test_exact/Makefile
@@ -17,9 +17,11 @@ FinSolveUser            = $(APP_LIB)/FinSolveDiffTransform
 
 # place to add object modules
 #
-ALL_OBJECTS = $(COMMON_OBJECTS) $(APP_LIB_OBJECTS)
+#ALL_OBJECTS = $(COMMON_OBJECTS) $(APP_LIB_OBJECTS)
+#ALL_SOURCES = $(COMMON_SOURCES) $(APP_LIB_SOURCES)
 
-ALL_SOURCES = $(COMMON_SOURCES) $(APP_LIB_SOURCES)
+ALL_OBJECTS = $(COMMON_OBJECTS)
+ALL_SOURCES = $(COMMON_SOURCES)
 
 TOPLIB_INCLUDE = -I$(TOPLIB) -I$(FINESS)/apps/1d/isentropic_euler/lib/ $(LIB_SYS_INCLUDE)
 
