Many minor edits
* Adding a routine, FinSolveButcher, that runs the code from a single
two-derivative Butcher array.

* Multiple other edits to minor apps - mainly focused on collecting total
varition information for the SSP work.

--- a/apps/1d/advection/lib/Makefile.defs
+++ b/apps/1d/advection/lib/Makefile.defs
@@ -25,6 +25,7 @@ D2FluxFunc  = $(APP_LIB)/D2FluxFunc
 # Eigen decomposition of the Flux function
 ProjectLeftEig   = $(APP_LIB)/ProjectLeftEig
 ProjectRightEig  = $(APP_LIB)/ProjectRightEig
+SetBndValues     = $(APP_LIB)/SetBndValues
 
 # Wave speed functions
 SetWaveSpd       = $(APP_LIB)/SetWaveSpd
