--- a/lib/1d/Makefile.defs
+++ b/lib/1d/Makefile.defs
@@ -87,6 +87,7 @@ BeforeStep           = $(LIB1D)/BeforeStep
 AfterUpdateSoln      = $(LIB1D)/AfterUpdateSoln
 ApplyMPPLimiter1D    = $(LIB1D)/ApplyMPPLimiter1D
 ConstructL           = $(LIB1D)/ConstructL
+ConstructLt          = $(LIB1D)/ConstructLt
 ConstructLFL         = $(LIB1D)/ConstructLFL
 ConstructLxWL        = $(LIB1D)/ConstructLxWL
 BeforeFullTimeStep   = $(LIB1D)/BeforeFullTimeStep
@@ -143,6 +144,7 @@ LIB1D_OBJECTS = \
   $(LIB1D)/ConvertQtoW.o \
   $(LIB1D)/ConvertWtoQ.o \
   $(ConstructL).o \
+  $(ConstructLt).o \
   $(ConstructLFL).o \
   $(ConstructLxWL).o \
   $(LIB1D)/UpdateSoln.o \
@@ -181,6 +183,7 @@ LIB1D_SOURCES = \
   $(LIB1D)/ConvertQtoW.cpp \
   $(LIB1D)/ConvertWtoQ.cpp \
   $(ConstructL).cpp \
+  $(ConstructLt).cpp \
   $(ConstructLFL).cpp \
   $(ConstructLxWL).cpp \
   $(LIB1D)/UpdateSoln.cpp \
