--- a/apps/1d/advection/sq_wave/Makefile
+++ b/apps/1d/advection/sq_wave/Makefile
@@ -11,7 +11,8 @@ include $(FINESS)/apps/1d/advection/lib/Makefile.defs
 # overridden library objects
 #
 #FinSolveUser           = $(FINESS)/lib/1d/FinSolveRK_PIF
-ConstructIntegratedF    = ConstructIntegratedF
+FinSolveUser           = $(FINESS)/lib/1d/FinSolveButcher
+#ConstructIntegratedF    = ConstructIntegratedF
 
 # place to add object modules
 #
