--- a/apps/1d/burgers/sine_to_n/parameters.ini
+++ b/apps/1d/burgers/sine_to_n/parameters.ini
@@ -1,24 +1,27 @@
+
 ; Parameters common to FINESS applications
 [finess]
-ndims       = 1         ; 1, 2, or 3
-nout        = 10        ; number of output times to print results
+ndims       = 1             ; 1, 2, or 3
+nout        = 1             ; number of output times to print results
 tfinal      = 1.591549430918953e-01 ; final time 
-initial_dt  = 1.00e-03   ; initial dt
-max_dt      = 1.0e10     ; max allowable dt 
-max_cfl     = 0.84       ; max allowable Courant number
-desired_cfl = 0.50       ; desired Courant number
-nv          = 500000    ; max number of time steps per call to DogSolve
-time_stepping_method = Runge-Kutta ; (e.g., Runge-Kutta, SDC, Lax-Wendroff, User-Defined)
-space_order = 5   ; order of accuracy in space
-time_order  = 3   ; order of accuracy in time
-verbosity   = 1   ; verbosity of output
-mcapa       = 0   ; mcapa (capacity function index in aux arrays)
-maux        = 0   ; maux (number of aux arrays, maux >= mcapa)
-source_term = false   ; source term (true or false)
+initial_dt  = 1.00          ; initial dt
+max_dt      = 1e10          ; max allowable dt 
+max_cfl     = 1.40          ; max allowable Courant number
+desired_cfl = 0.4       ; desired Courant number
+nv          = 500000     ; max number of time steps per call to DogSolve
+time_stepping_method = User-Defined ; (e.g., Runge-Kutta, SDC, Lax-Wendroff, User-Defined)
+space_order = 5   ; =method(1)= order of accuracy in space
+time_order  = 3   ; =method(2)= order of accuracy in time
 meqn        = 1   ; number of equations
+verbosity   = 1   ; =method(4)= verbosity of output
+mcapa       = 0   ; =method(5)= mcapa (capacity function index in aux arrays)
+maux        = 0   ; =method(6)= maux (number of aux arrays, maux >= mcapa)
+source_term = false ; =method(7)= source term (1-yes, 0-no)
+output_dir  = output_0006 ; location of the output directory
 
 [grid]
-mx    =    100   ; number of grid elements in x-direction
+mx    =  640  ; number of grid elements in x-direction
 mbc   =      5   ; number of ghost cells on each boundary
 xlow  =  0.0e0   ; left end point
 xhigh =  2.0e0   ; right end point
+
