--- a/apps/1d/euler/double_rarefaction/parameters.ini
+++ b/apps/1d/euler/double_rarefaction/parameters.ini
@@ -1,29 +1,36 @@
-; Parameters common to FINESS applications
+
+; Parameters common to finess applications
 [finess]
-ndims       = 1         ; 1, 2, or 3
-nout        = 10        ; number of output times to print results
-tfinal      = 0.6       ; final time
-initial_dt  = 0.0005    ; initial dt
-max_dt      = 1.0e10    ; max allowable dt 
-max_cfl     = 0.16      ; max allowable Courant number
-desired_cfl = 0.15      ; desired Courant number
-nv          = 500000    ; max number of time steps per call to DogSolve
-time_stepping_method = Lax-Wendroff ; (e.g., Runge-Kutta, SDC, Lax-Wendroff, User-Defined)
-mpp_limiter = true ; flag for positivity preserving limiter
-space_order = 5   ; order of accuracy in space
-time_order  = 3   ; order of accuracy in time
-verbosity   = 1   ; verbosity of output
+ndims       = 1          ; 1, 2, or 3
+nout        = 1             ; number of output times to print results
+tfinal      = 0.160000   ; final time
+initial_dt  = 1.0        ; initial dt
+max_dt      = 1.0e10     ; max allowable dt 
+max_cfl     = 1.8        ; max allowable Courant number
+desired_cfl = 1.000000000000000    ; desired Courant number
+nv          = 500000     ; max number of time steps per call to DogSolve
+time_stepping_method = Runge-Kutta ; (e.g., Runge-Kutta, SDC, Lax-Wendroff, User-Defined)
+space_order = 1   ; order of accuracy in space 
+time_order  = 1   ; order of accuracy in time
+verbosity   = 0   ; verbosity of output
 mcapa       = 0   ; mcapa (capacity function index in aux arrays)
 maux        = 0   ; maux (number of aux arrays, maux >= mcapa)
-source_term = false ; source term (true or false)
+source_term = false   ; source term (true or false)
 meqn        = 5   ; number of equations
+output_dir  = output0100 ; location of the output directory
 global_alpha = true  ; parameter for using a global value for alpha
+
 [grid]
-mx    = 400    ; number of grid elements in x-direction
-mbc   = 5      ; number of ghost cells on each boundary
-xlow  = -1.0e0 ; left end point
-xhigh =  1.0e0 ; right end point
+mx    =  200  ; number of grid elements in x-direction
+mbc   =      5   ; number of ghost cells on each boundary
+xlow  = -1.0e0   ; left end point
+xhigh =  1.0e0   ; right end point
+
 [euler]
 gamma = 1.4     ; gamma (gas constant)
+
 [weno]
-eps   = 1e-6
+weno_version  = JS     ; type of WENO reconstruction (e.g. JS, FD, Z)
+epsilon       = 1e-29  ; regulization parameter  ( epsilon > 0.0        )
+alpha_scaling = 1.1    ; scaling parameter       ( alpha_scaling >= 1.0 )
+
