--- a/apps/1d/euler/harten_shock_tube/Makefile
+++ b/apps/1d/euler/harten_shock_tube/Makefile
@@ -8,15 +8,20 @@ include $(FINESS)/apps/1d/euler/lib/Makefile.defs
 
 # overridden library objects
 #
-FinSolveUser            = $(FINESS)/lib/1d/FinSolveRK_PIF
+
+# uncomment these lines to use the HLL(E) Riemann solver
+#RiemannSolve     = $(LIB1D)/RiemannSolveHLL
+#RiemannSolveLxW  = $(LIB1D)/LaxWendroff/RiemannSolveLxW_HLL
+FinSolveUser           = $(FINESS)/lib/1d/FinSolveButcher
+ConstructIntegratedF   = ConstructIntegratedF
+ConSoln                = ConSoln
 
 # place to add object modules
 #
 ALL_OBJECTS = $(COMMON_OBJECTS) $(APP_LIB_OBJECTS)
-
 ALL_SOURCES = $(COMMON_SOURCES) $(APP_LIB_SOURCES)
 
-TOPLIB_INCLUDE = -I$(TOPLIB) -I$(FINESS)/apps/1d/euler/lib/ $(LIB_SYS_INCLUDE)
+#TOPLIB_INCLUDE = -I$(TOPLIB) -I$(FINESS)/apps/1d/euler/lib/ $(LIB_SYS_INCLUDE)
 
 ### targets ###
 
