updated Makefiles for all 2D Euler examples to point to the correct FinSolveDT

--- a/apps/2d/euler/shock_diffraction/Makefile
+++ b/apps/2d/euler/shock_diffraction/Makefile
@@ -6,8 +6,11 @@ include $(FINESS)/lib/2d/Makefile.defs
 # Default (application level) definintions
 include $(FINESS)/apps/2d/euler/lib/Makefile.defs
 
+## ------------------------------------------------------------------------- ##
 # overridden library objects
 #
+#FinSolveUser            = $(FINESS)/lib/2d/FinSolveRK_PIF
+FinSolveUser            = $(FINESS)/lib/2d/FinSolveDT
 
 # Used to replace values inside wedge with (constant) initial conditions
 AfterFullTimeStep   = AfterFullTimeStep
@@ -16,6 +19,9 @@ AfterFullTimeStep   = AfterFullTimeStep
 # conditions.  For this problem, we need two SetBndValues functions: one for
 # x-direction, and one for y-direction
 ConstructL          = ConstructL
+
+## ------------------------------------------------------------------------- ##
+
 
 # place to add object modules
 #
