DTs with mpp limiter

--- a/apps/1d/mhd/shock_tube/parameters.ini
+++ b/apps/1d/mhd/shock_tube/parameters.ini
@@ -1,15 +1,15 @@
 ; Parameters common to dogpack applications
 [finess]
 ndims       = 1         ; 1, 2, or 3
-nout        = 5         ; number of output times to print results
-tfinal      = 0.3       ; final time
-initial_dt      = 0.000008  ; initial dt
+nout        = 20        ; number of output times to print results
+tfinal      = 0.2       ; final time
+initial_dt  = 0.000008  ; initial dt
 max_dt      = 1.0e10    ; max allowable dt 
-max_cfl     = 0.50      ; max allowable Courant number 1/(2k-1)
-desired_cfl     = 0.40      ; desired Courant number
+max_cfl     = 0.40      ; max allowable Courant number 1/(2k-1)
+desired_cfl = 0.30      ; desired Courant number
 nv          = 500000    ; max number of time steps per call to DogSolve
 time_stepping_method = Runge-Kutta ; (e.g., Runge-Kutta, SDC, Lax-Wendroff, User-Defined)
-space_order = 11  ; =method(1)= order of accuracy in space
+space_order = 5  ; =method(1)= order of accuracy in space
 time_order  = 4  ; =method(2)= order of accuracy in time
 verbosity   = 1  ; =method(4)= verbosity of output
 mcapa       = 0  ; =method(5)= mcapa (capacity function index in aux arrays)
@@ -19,9 +19,10 @@ meqn        = 8  ; number of equations
 ;mrestart    = 0  ; restart from old data (1-yes, 0-no)
 ;nstart      = 0  ; if ;mrestart==1: from file q(nstart)_restart.dat
 ;datafmt     = 1  ; 1 for ascii, 5 for hdf5.
+global_alpha = true 
 [grid]
-mx    = 1000   ; number of grid elements in x-direction
-mbc   =  7     ; number of ghost cells on each boundary
+mx    = 5000   ; number of grid elements in x-direction
+mbc   =  3     ; number of ghost cells on each boundary
 xlow  = -1.0e0 ; left end point
 xhigh =  1.0e0 ; right end point
 [mhd]
